Added Login&SignUp page & breadcrum in the app

--- a/src/Pages/CSS/LoginSignup.css
+++ b/src/Pages/CSS/LoginSignup.css
@@ -1,4 +1,4 @@
-/* .LoginSignup {
+.loginSignup {
     width: 100%;
     height: 80vh;
     background: #fce3fe;
@@ -9,7 +9,7 @@
     width: 580px;
     height: 600px;
     background: white;
-    margin: -114px 380px;
+    margin: auto;
     padding: 40px 60px;
 }
 
@@ -17,15 +17,15 @@
     margin: 20px 0px;
 }
 
-.LoginSignup-fields {
+.loginSignup-fields {
     display: flex;
     flex-direction: column;
     gap: 29px;
     margin-top: 30px;
 }
 
-.LoginSignup-fields input {
-    height: 72px;
+.loginSignup-fields input {
+    height: 32px;
     width: 100%;
     padding-left: 20px;
     border: 1px solid #c9c9c9;
@@ -35,7 +35,7 @@
 }
 
 .loginSignup-container button {
-    width: 605px;
+    width: 580px;
     height: 72px;
     color: white;
     background: #ff4141;
@@ -44,4 +44,26 @@
     font-size: 24px;
     font-weight: 500;
     cursor: pointer;
-} */
+}
+
+.loginSignup-login {
+    margin-top: 20px;
+    color: #5c5c5c;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.loginSignup-login span {
+    color: #ff4141;
+    font-weight: 600;
+}
+
+.loginSignup-agree {
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+    gap: 20px;
+    color: #5c5c5c;
+    font-size: 18px;
+    font-weight: 500;
+}
